2025-07-19T00:57:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16383157203 # 709
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-19
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 868 1346 / 883 1361
* notice: next accum: outdated-unq outdated-all / unq all: 871 1349 / 884 1362
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-04 2025-07-05] / [2025-07-18]

2025-07-18T00:58:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16359505710 # 708
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-18
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 866 1344 / 882 1360
* notice: next accum: outdated-unq outdated-all / unq all: 868 1346 / 883 1361
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-03] / [2025-07-04 2025-07-17]

2025-07-17T00:59:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16333633182 # 707
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-17
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 866 1344 / 881 1359
* notice: next accum: outdated-unq outdated-all / unq all: 866 1344 / 882 1360
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-07-03 2025-07-16]

2025-07-16T00:58:47Z: