@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-19T00:57:15Z",
-  "count_outdated" : 1349,
-  "uniques_outdated" : 871,
+  "timestamp" : "2025-07-20T01:04:53Z",
+  "count_outdated" : 1350,
+  "uniques_outdated" : 872,
   "count" : 1362,
   "uniques" : 884,
   "clones" : [
-    {
-      "timestamp": "2025-07-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-07T00:00:00Z",
       "count": 1,
